--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+/connection.py
+connection.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
